Refactoring done | MS II

--- a/4º Año/Metodologia de Sistemas II/Unidad 7/1. Gestion de Proyectos.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 7/1. Gestion de Proyectos.md
@@ -1,201 +1,109 @@
-### Introducción
-
-Los seres humanos usamos la percepción como primer paso para crear la realidad personal, siendo la percepción una de las funciones del cerebro que nos permite procesar los estímulos que nos llegan desde el exterior, recogidos a través de los cinco sentidos, y también los que nos llegan desde nuestro propio interior.
-
-Cuando vamos a desarrollar proyectos de software lo que hacemos es realizar una abstracción de esa percepción que tenemos del mundo real. Para realizar esa abstracción, además de nuestros sentidos, nuestro conocimiento y nuestra experiencia intervendrán los usuarios y otros componentes del equipo de proyecto.
-
-#### Torre de Babel
-##### ¿Qué anduvo bien?
-1. Claridad de la misión: sin duda; el proyecto falló antes de establecerse que era imposible.
-2. Mano de obra: disponían de una cantidad enorme.
-3. Materiales: los necesarios estaban en la zona (Mesopotamia).
-4. Tiempo: no había restricción alguna de tiempo.
-5. Tecnología: era la adecuada para construir una torre estable (pirámide o cono), el proyecto fracasó antes que se alcanzaran limitaciones tecnológicas.
-
-##### ¿Qué fracasó?
-- Comunicación y en consecuencia.
-- Organización.
-
-Los criterios de éxito para la gestión del proyecto varían de un proyecto a otro, pero, para la mayoría de los proyectos, las metas importantes son:
+Cuando vamos a desarrollar proyectos de software lo que hacemos es realizar una abstracción del mundo real. Para realizar esa abstracción, además de nuestros sentidos, nuestro conocimiento y nuestra experiencia intervendrán los usuarios y otros componentes del equipo del proyecto. Los criterios de éxito para la gestión del proyecto varían de un proyecto a otro, pero, para la mayoría de los proyectos, las metas importantes son:
 
 1. Entregar el software al cliente en el tiempo acordado.
 2. Mantener costos dentro del presupuesto general.
 3. Entregar software que cumpla con las expectativas del cliente.
 4. Mantener un equipo de desarrollo óptimo y con buen funcionamiento.
 
-#### En la gestión de software existen algunas diferencias:
+Debido a que el software es un producto intangible. Los administradores de proyectos de software no pueden constatar el progreso con solo observar el artefacto que se construye. Más bien, ellos se apoyan en otros para crear la prueba que pueden utilizar al revisar el progreso del trabajo. Los grandes proyectos de software con frecuencia son proyectos excepcionales, considerándose, en general diferentes en ciertas formas de los proyectos anteriores.
+Los cambios tecnológicos en computadoras y comunicaciones pueden volver obsoleta la experiencia de un administrador, por lo que las lecciones aprendidas de proyectos anteriores pueden no ser aplicables a nuevos proyectos.
+Los procesos de software son variables y específicos de cada organización. Aunque se han logrado avances en su estandarización y mejora, no se puede predecir con certeza cuándo un proceso particular generará problemas de desarrollo. Lo mismo sucede con la labor de los Project Manager o Gerente del proyecto de software, cuya actividad varía de una organización a otra dependiendo de la función de la organización y del producto a desarrollar. A pesar de lo anterior los gerentes son los responsables de llevar adelante las siguientes actividades:
 
-El producto es intangible. No se puede ver ni tocar. Los administradores de proyectos de software no pueden constatar el progreso con sólo observar el artefacto que se construye. Más bien, ellos se apoyan en otros para crear la prueba que pueden utilizar al revisar el progreso del trabajo.
+1.  **Planeación del proyecto**: Estimación y calendarización del desarrollo del proyecto, asignación de tareas a las personas, supervisión del trabajo verificando los estándares requeridos y monitoreando el avance para comprobar que el desarrollo esté a tiempo y dentro del presupuesto.
+2. **Informes**: Informar el avance del proyecto a los clientes y administradores de la compañía que desarrolla el software, siendo los responsables de redactar documentos concisos y coherentes que sinteticen información crítica de reportes detallados del proyecto. Es necesario que esta información se presente durante las revisiones de avance.
+3. **Gestión del riesgo**: Los administradores de proyecto tienen que valorar los riesgos que pueden afectar un proyecto, monitorizar dichos riesgos y emprender acciones cuando surjan problemas.
+4. **Gestión de personal**: Los administradores de proyecto son responsables de administrar un equipo de personas. Deben elegir a los integrantes de sus equipos y establecer formas de trabajar que conduzcan a desempeño efectivo del equipo.
+5. **Redactar propuestas**: La primera etapa en un proyecto de software puede implicar escribir una propuesta para obtener un contrato de trabajo. La propuesta describe los objetivos del proyecto y cómo se realizará, estimando costos y plazos de entrega, además de justificar por qué el contrato del proyecto debería concederse a una organización o un equipo particular.
 
-Los grandes proyectos de software con frecuencia son proyectos excepcionales. Los grandes proyectos de software se consideran en general diferentes en ciertas formas de los proyectos anteriores.
+## Project Management Office (PMO)
 
-Los cambios tecnológicos en computadoras y comunicaciones pueden volver obsoleta la experiencia de un administrador. Las lecciones aprendidas de proyectos anteriores pueden no ser aplicables a nuevos proyectos.
+La ***oficina de gestión de proyectos*** es una unidad organizacional que provee servicios de soporte a los proyectos y es responsable de proyectos específicos. Centraliza y coordina los proyectos, dentro de sus principales funciones se encuentran:
 
-Los procesos de software son variables y específicos de la organización. Los procesos de software varían de una organización a otra. Aunque se ha producido un notorio avance en la estandarización y el mejoramiento de los procesos, no es posible predecir de manera confiable cuándo un proceso de software particular conducirá a problemas de desarrollo.
-
-La labor de un Project Manager/Gerente del proyecto de software varía de una organización a otra dependiendo de la función de la organización y del producto a desarrollar.
-
-A pesar de lo anterior los gerentes tienen responsabilidades de las siguientes actividades:
-
-##### Planeación del proyecto
-- Estimación y calendarización del desarrollo del proyecto.
-- Asignación de tareas a las personas.
-- Supervisión del trabajo verificando los estándares requeridos y monitoreando el avance para comprobar que el desarrollo esté a tiempo y dentro del presupuesto.
-
-##### Informes
-- Informar el avance del proyecto a los clientes y administradores de la compañía que desarrolla el software.
-- Deben redactar documentos concisos y coherentes que sinteticen información crítica de reportes detallados del proyecto. Es necesario que esta información se presente durante las revisiones de avance.
-
-##### Gestión del riesgo
-Los administradores de proyecto tienen que valorar los riesgos que pueden afectar un proyecto, monitorizar dichos riesgos y emprender acciones cuando surjan problemas.
-
-##### Gestión de personal
-Los administradores de proyecto son responsables de administrar un equipo de personas. Deben elegir a los integrantes de sus equipos y establecer formas de trabajar que conduzcan a desempeño efectivo del equipo.
-
-##### Redactar propuestas
-La primera etapa en un proyecto de software puede implicar escribir una propuesta para obtener un contrato de trabajo. La propuesta describe los objetivos del proyecto y cómo se realizará, estimaciones de costo y calendarización, además de justificar por qué el contrato del proyecto debería concederse a una organización o un equipo particular.
-
-#### PMO: Project Management Office
-Es una unidad organizacional que provee servicios de soporte a los proyectos y es responsable por proyectos específicos. Centraliza y coordina los proyectos.
-
-##### Alcance de sus funciones:
-- Recursos compartidos entre todos los proyectos.
-- Metodología de dirección de proyectos, mejores prácticas y normas.
-- Documentación compartida por los proyectos: políticas, procedimientos y templates.
+- Coordinar recursos compartidos entre todos los proyectos.
+- Selección de la metodología de dirección de proyectos, mejores prácticas y normas.
+- Redactar la documentación compartida por los proyectos, esto incluye a las políticas, los procedimientos y templates.
 - Configuración centralizada.
-- Riesgos compartidos para todos los proyectos.
-- Operación y gestión de herramientas de los proyectos.
-- Gestión de las comunicaciones entre proyectos.
+- Analizar los riesgos compartidos para todos los proyectos.
+- Operar y gestionar las herramientas de los proyectos.
+- Gestionar las comunicaciones entre los distintos proyectos.
 
-### ¿Qué es un proyecto?
-Un proyecto es una actividad temporaria destinada a crear un producto o servicio único. 
-
-Temporaria: cada proyecto tiene un comienzo y fin definidos, aunque ello no se aplique al resultado del proyecto. Al final del proyecto hay algo (un producto o un servicio) y ello requiere concurrencia de la finalización.
-
-Único: el producto o servicio difiere en algo de todos los productos o servicios similares.
+>[!example] ¿Qué es un proyecto?
+>Un proyecto es una actividad temporaria destinada a crear un producto o servicio único. Se dice que es ***temporaria*** porque cada proyecto tiene un comienzo y fin definidos, aunque ello no se aplique al resultado del proyecto. Al final del proyecto hay algo ya sea un producto o servicio y ello requiere concurrencia de la finalización. Por otro lado, se dice que es ***único*** porque el producto o servicio difiere en algo de los demás productos o servicios similares.
 
 ### Project Management (PM)
-Es la aplicación de conocimiento, habilidades, herramientas y técnicas a las actividades de proyecto para satisfacer o exceder las necesidades y expectativas de los stakeholders de un proyecto.
 
-#### Stakeholders
-Individuo u organización que está involucrado o interesado o puede ser afectado por las actividades del proyecto.
+La ***gestión de proyectos*** no es más que la aplicación de conocimiento, habilidades, herramientas y técnicas a las actividades de proyecto para satisfacer o exceder las necesidades y expectativas de los stakeholders de un proyecto.
 
-Stakeholders clave:
-- Gerente de proyecto.
-- Cliente/usuario.
-- Organización ejecutora.
-- Miembros del equipo del proyecto.
-- Patrocinador.
-- Oficina de Gestión de Proyectos (PMO).
+>[!tldr] Los Stakeholders
+>Los stakeholders o partes interesadas son individuo u organización que está involucrado o interesado o puede ser afectado por las actividades del proyecto. Algunos de los stakeholders clave de un proyecto son los gerentes de proyecto, cliente/usuario, organización ejecutora del proyecto, miembros del equipo, patrocinadores y por supuesto la oficina de gestión de proyectos.
+>Estos stakeholders pueden ser categorizados de la siguiente manera:
+>
+>- Internos/externos.
+>- Propietarios y financiadores.
+>- Proveedores y contratistas.
+>- Miembros del equipo.
+>- Agencias del gobierno.
+>- Ciudadanos individuales.
+>
+>Adicionalmente, las partes interesadas pueden estar relacionadas con el proyecto ya sea por interés en el uso del software, por cuestiones económicas, por motivos contractuales e incluso cuestiones legales o jurídicas.
 
-Categorías:
-- Internos/externos.
-- Propietarios y financiadores.
-- Proveedores y contratistas.
-- Miembros del equipo.
-- Agencias del gobierno.
-- Ciudadanos individuales.
+A la hora de llevar adelante un proyecto pueden aparecer una serie de restricciones sobre las cuales operar. Existen cinco restricciones principales:
 
-Relaciones con el proyecto:
-- De uso.
-- Económica.
-- Contractual.
-- Legal/jurídica.
+- **Alcance**: Delimita el proyecto, estableciendo qué se debe y qué no se debe hacer. Es importante distinguir entre el alcance del proyecto, que abarca las actividades y productos generados, y el alcance del producto, que se define usualmente como una especificación funcional.
+- **Calidad**: Calidad tanto del proceso como del producto.
+- **Costo**: Se refiere al presupuesto establecido para el proyecto y es una consideración clave en su gestión. Aunque el costo se relaciona con los beneficios, ese análisis queda fuera del alcance de la gestión de proyectos.
+- **Tiempo**:El tiempo requerido depende de varias variables, incluyendo el plazo establecido por el cliente. Como recurso, el tiempo no se puede almacenar ni renovar, por lo que la misión del gerente de proyecto es utilizar el tiempo futuro de la manera más eficiente posible.
+- **Recursos**: Son activos que abarcan más que solo aspectos contables, e incluyen personas, software, instalaciones, entre otros. En nuestro contexto, los recursos humanos son el principal recurso.
 
-### Restricciones principales de un proyecto
-Sobre un proyecto actúan cinco restricciones principales:
-
-- Alcance. Define los bordes del proyecto, establece qué se debe hacer y qué no se debe hacer. Hay que diferenciar el alcance del proyecto, que son las actividades y los productos que se generan en el proyecto, del alcance del producto que habitualmente se formula como una especificación funcional.
-- Calidad. Calidad del proceso y calidad del producto.
-- Costo. Se piensa en términos del presupuesto establecido para el proyecto, es una consideración fundamental del ciclo de vida de gestión de proyectos. En el contexto, el costo se relaciona con los beneficios pero ese análisis está fuera del alcance de la gestión de proyectos.
-- Tiempo. El tiempo requerido resulta de la concurrencia de varias variables: el cliente fija un plazo. Como recurso, el tiempo no se puede inventariar y no es renovable, el gerente de proyecto tiene como misión usar el tiempo futuro en la forma más eficiente posible para el proyecto.
-- Recursos. Son activos, en una visión amplia, no meramente contable, que incluye gente, software, facilidades, etc. Claramente en nuestro interés, los RRHH son el principal recurso.
-
-#### Tiempo, costo, recursos
-- La gestión del proyecto se ejecuta dentro del triángulo.
-- Con las restricciones de costos, tiempo y recursos debe alcanzarse la funcionalidad y calidad requerida para el producto.
-- El Project Manager debe tomar decisiones que son opciones entre sus bordes (T+C+R).
-- La meta principal es funcionalidad y calidad en el tiempo, costo y con los recursos asignados.
+>[!tldr] Tiempo, costos y recursos
+>La gestión del proyecto se ejecuta generalmente dentro del triángulo, donde con las restricciones de costos, tiempo y recursos debe alcanzarse la funcionalidad y calidad requerida para el producto. El Project Manager debe tomar las mejores decisiones dentro de este triangulo con el fun de alcanzar la funcionalidad y calidad en el tiempo, costo y con los recursos asignados.
 
 ## Gestión del Riesgo
-La gestión del riesgo implica anticipar riesgos que pudieran alterar el calendario del proyecto o la calidad del software a entregar, y posteriormente tomar acciones para evitar dichos riesgos.
 
-### Categorías de Riesgos
+La gestión del riesgo implica anticipar riesgos que pudieran alterar el calendario del proyecto o la calidad del software a entregar, y posteriormente tomar acciones para evitar dichos riesgos. Dichos riesgos se pueden categorizar de la siguiente manera:
+
 1. **Riesgos del Proyecto**: Los riesgos que alteran el calendario o los recursos del proyecto. Por ejemplo, la renuncia de un diseñador experimentado puede retrasar el diseño del software.
 2. **Riesgos del Producto**: Los riesgos que afectan la calidad o el rendimiento del software. Un ejemplo es la falla de un componente adquirido que no funciona como se esperaba.
 3. **Riesgos Empresariales**: Riesgos que afectan a la organización que desarrolla o adquiere el software. Por ejemplo, la introducción de un nuevo producto por un competidor puede afectar las ventas esperadas.
 
-### Registro y Análisis de Riesgos
-Es necesario registrar los resultados del análisis del riesgo en el plan del proyecto, junto con un análisis de consecuencias. Esto ayuda a prepararse para enfrentar los problemas sin que estos conduzcan a un presupuesto inaceptable o a retrasos en el calendario.
+Cuando se está gestionando un proyecto es necesario registrar los resultados del análisis del riesgo en el plan del proyecto, junto con un análisis de consecuencias. Esto ayuda a prepararse para enfrentar los problemas sin que estos conduzcan a un presupuesto inaceptable o a retrasos en el calendario. Es indispensable diseñar planes de contingencia de manera que, si ocurren los riesgos, se puedan tomar acciones inmediatas de recuperación. De forma genérica estos son los pasos que se sigue cuando se realiza la gestión de riesgos:
 
-Es indispensable diseñar planes de contingencia de manera que, si ocurren los riesgos, se puedan tomar acciones inmediatas de recuperación.
-
-### Proceso de Gestión de Riesgo
 1. **Identificación del Riesgo**: Identificar posibles riesgos para el proyecto, el producto y la empresa.
 2. **Análisis de Riesgos**: Valorar la probabilidad y las consecuencias de los riesgos identificados.
 3. **Planeación del Riesgo**: Elaborar estrategias para enfrentar, evitar o minimizar sus efectos en el proyecto.
 4. **Monitorización del Riesgo**: Revisar regularmente el riesgo y los planes para mitigarlo.
 
-#### Tipos de Riesgos Identificables
-En la primera etapa del proceso de gestión del riesgo se identifican los riesgos que pudieran plantear una mayor amenaza al proceso de ingeniería de software, al software a desarrollar, o a la organización que lo desarrolla.
+En la primera etapa del proceso de gestión del riesgo se identifican los riesgos que pudieran plantear una mayor amenaza al proceso de ingeniería de software, al software a desarrollar, o a la organización que lo desarrolla. Estos riesgos pueden ser:
 
-- **Riesgos Tecnológicos**: Derivados de las tecnologías utilizadas en el proyecto.
-- **Riesgos Personales**: Asociados con las personas del equipo de desarrollo.
-- **Riesgos Organizacionales**: Relacionados con el entorno donde se desarrolla el software.
-- **Riesgos de Herramientas**: Resultan de las herramientas de software usadas en el proyecto.
-- **Riesgos de Requerimientos**: Cambios imprevistos en los requerimientos del cliente.
-- **Riesgos de Estimación**: Estimaciones incorrectas de los recursos necesarios para el proyecto.
+- **Tecnológicos**: Derivados de las tecnologías utilizadas en el proyecto.
+- **Personales**: Asociados con las personas del equipo de desarrollo.
+- **Organizacionales**: Relacionados con el entorno donde se desarrolla el software.
+- **Herramientas**: Resultan de las herramientas de software usadas en el proyecto.
+- **Requerimientos**: Cambios imprevistos en los requerimientos del cliente.
+- **Estimación**: Estimaciones incorrectas de los recursos necesarios para el proyecto.
+
+>[!note] Monitorización de Riesgos
+>La monitorización del riesgo es el proceso de verificar que no han cambiado las suposiciones sobre los riesgos del producto, el proceso y la empresa. Los riesgos deben monitorizarse comúnmente en todas las etapas del proyecto. En cada revisión administrativa, es necesario reflexionar y estudiar cada uno de los riesgos clave por separado.
 
 ### Indicadores de Riesgo
-Durante el proceso de análisis de riesgos, hay que considerar cada riesgo identificado y realizar un juicio acerca de la probabilidad y gravedad de dicho riesgo.
 
-- **Tecnológico**: Retrasos en la entrega de hardware o software, problemas tecnológicos frecuentes.
-- **Personal**: Baja moral, malas relaciones entre miembros, alta rotación de personal.
-- **Organizacional**: Chismes en la organización, falta de acción de los altos ejecutivos.
-- **Herramientas**: Reticencia a usar herramientas, quejas sobre las herramientas CASE.
-- **Requerimientos**: Muchas peticiones de cambio, quejas de los clientes.
-- **Estimación**: Fallos en cumplir con el calendario, incapacidad para corregir defectos a tiempo.
+Durante el análisis de riesgos, es crucial evaluar cada riesgo identificado, considerando su probabilidad y gravedad.
+
+- **Tecnológico**: Retrasos en la entrega de hardware o software y problemas tecnológicos recurrentes.
+- **Personal**: Baja moral, conflictos entre miembros y alta rotación de personal.
+- **Organizacional**: Chismes internos y falta de acción por parte de los altos ejecutivos.
+- **Herramientas**: Resistencia al uso de herramientas y quejas sobre las herramientas CASE.
+- **Requerimientos**: Múltiples solicitudes de cambio y quejas de los clientes.
+- **Estimación**: Incumplimiento de plazos y fallos en la corrección oportuna de defectos.
 
 No es posible hacer valoraciones precisas y numéricas de la probabilidad y gravedad de cada riesgo. Sin embargo, se puede clasificar el riesgo en varias bandas:
 
-1. **Probabilidad del Riesgo**:
-   - Muy baja (< 10%)
-   - Baja (10% - 25%)
-   - Moderada (25% - 50%)
-   - Alta (50% - 75%)
-   - Muy alta (> 75%)
+![[calificacion-riesgo.png]]
 
-2. **Efectos del Riesgo**:
-   - Catastróficos (amenazan la supervivencia del proyecto)
-   - Graves (causarían grandes demoras)
-   - Tolerables (demoras dentro de la contingencia permitida)
-   - Insignificantes
+>[!tldr] Planificación de Riesgos
+>Para cada riesgo, es importante considerar acciones que minimicen la perturbación del proyecto en caso de que el riesgo se materialice. Las posibles estrategias a seguir son:
+>
+>1. **Estrategias de Evitación**: Reducir la probabilidad de que el riesgo ocurra.
+>2. **Estrategias de Minimización**: Disminuir el impacto del riesgo.
+>3. **Planes de Contingencia**: Prepararse para el peor escenario con estrategias para afrontar el riesgo.
 
-### Ejemplos de Análisis de Riesgos
-- Problemas financieros de la organización que fuerzan reducciones en el presupuesto del proyecto: **Probabilidad Baja**, **Efectos Catastróficos**.
-- Imposibilidad de reclutar personal con las habilidades requeridas: **Probabilidad Alta**, **Efectos Catastróficos**.
-- El personal clave está enfermo e indispuesto en momentos críticos: **Probabilidad Moderada**, **Efectos Graves**.
-- Las herramientas de software no pueden trabajar de manera integrada: **Probabilidad Alta**, **Efectos Tolerables**.
-- El código elaborado por las herramientas de generación de código de software es ineficiente: **Probabilidad Moderada**, **Efectos Insignificantes**.
-
-## Planificación de Riesgos
-Para cada uno de los riesgos, se deben considerar acciones para minimizar la perturbación del proyecto si se materializa el riesgo identificado.
-
-### Estrategias para Gestionar el Riesgo
-1. **Estrategias de Evitación**: Reducir la probabilidad de que surja el riesgo.
-   - Ejemplo: Enfrentar los componentes defectuosos.
-2. **Estrategias de Minimización**: Reducir el efecto del riesgo.
-   - Ejemplo: Estrategia para las enfermedades del personal.
-3. **Planes de Contingencia**: Prepararse para lo peor con estrategias para hacer frente al riesgo.
-   - Ejemplo: Estrategia para los problemas financieros de la organización.
-
-### Indicadores de Riesgo
-- **Tecnológico**: Entrega tardía de hardware o software, muchos problemas tecnológicos reportados.
-- **Personal**: Baja moral del personal, malas relaciones entre miembros, alta rotación.
-- **Organizacional**: Chismes en la organización, falta de acción de los altos ejecutivos.
-- **Herramientas**: Reticencia a usar herramientas, quejas sobre las herramientas CASE, demandas por estaciones de trabajo mejor equipadas.
-- **Requerimientos**: Muchas peticiones de cambio, quejas de los clientes.
-- **Estimación**: Fallos para cumplir con el calendario, incapacidad para corregir defectos a tiempo.
-
-## Monitorización de Riesgos
-La monitorización del riesgo es el proceso de verificar que no han cambiado las suposiciones sobre los riesgos del producto, el proceso y la empresa. Los riesgos deben monitorizarse comúnmente en todas las etapas del proyecto. En cada revisión administrativa, es necesario reflexionar y estudiar cada uno de los riesgos clave por separado.
