--- a/4º Año/Metodologia de Sistemas II/Unidad 7/2. Trabajo en Equipo.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 7/2. Trabajo en Equipo.md
@@ -1,143 +1,72 @@
-### Introducción
-Cuando un grupo de personas trabaja en pos de una meta en común parece hablarse de trabajo en equipo. Sin embargo, la cuestión no es tan sencilla. La reunión de diversas personas unidas por un propósito común no siempre produce resultados propios de un trabajo en equipo. Por eso, nos vamos a centrar en cómo conseguir que el trabajo en equipo sea eficaz.
+Cuando un grupo de personas trabaja hacia un objetivo común, se tiende a hablar de trabajo en equipo. Sin embargo, no es tan simple. La unión de personas con un propósito compartido no garantiza resultados propios de un verdadero trabajo en equipo. Por eso, nos enfocaremos en cómo lograr que el trabajo en equipo sea realmente eficaz.
 
-### Gestión del Personal
-Reclutar y mantener al buen personal cuesta mucho dinero a las organizaciones. Los administradores del proyecto de software deben garantizar que la organización obtenga el mayor rendimiento. Los buenos administradores del proyecto de software tienen con frecuencia falencias a la hora de gestionar personal, incluyendo una carencia de habilidades para dirigir y motivar a un equipo del proyecto.
+## Gestión del Personal
 
-#### Factores Críticos para la Gestión del Personal
-Según Sommerville en su libro "Ingeniería de Software", existen cuatro factores críticos que el administrador del proyecto debería conocer:
+Reclutar y retener buen personal es costoso para las organizaciones, por lo tanto, los administradores de proyectos deben asegurar un alto rendimiento del equipo de trabajo. Sin embargo, incluso los buenos administradores de software a menudo carecen de habilidades para dirigir y motivar a su equipo.
+Según Sommerville, existen cuatro factores críticos que el administrador del proyecto debería conocer:
+
 - **Consistencia:** Todas las personas deben recibir el mismo trato.
 - **Respeto:** Todas las personas deben recibir una oportunidad para aportar.
 - **Inclusión:** Escuchar las propuestas y considerar todas las visiones.
 - **Honestidad:** Ser claro acerca de lo que está bien o mal.
 
-#### Motivación del Personal
-Organizar el trabajo y el ambiente laboral para alentar a los individuos a desempeñarse tan efectivamente como sea posible.
+Organizar el trabajo y el ambiente laboral con el fin de alentar a los individuos a desempeñarse lo más eficientemente posible es uno de los principales objetivos, ya que se observó que, sin motivación adecuada, los trabajadores pueden trabajar con lentitud, cometer errores, y no contribuir con las metas más amplias del equipo o la organización. La motivación para las personas puede provenir del reconocimiento público y económico, de la socialización o incluso de la asignación a tareas importantes, no imposibles.
 
-Se observa que, sin motivación adecuada, los trabajadores pueden trabajar con lentitud, cometer errores, y no contribuir con las metas más amplias del equipo o la organización.
+>[!tldr] Problemas de la Motivación según Maslow
+>El modelo de motivación de Maslow es útil para entender la motivación personal, pero no considera que las personas también forman parte de una organización o grupo profesional. Es importante pensar no solo en la motivación individual, sino también en cómo motivar a un equipo para alcanzar los objetivos de la organización.
+>En un estudio psicológico de Bass y Dunterman (1963), se analizó la sensibilidad de grupos homogéneos en términos de orientación (interacción), orientación a la tarea, y auto-orientación. Clasificaron a los profesionales en tres tipos:
+>
+>1. **Personas orientadas a las tareas:** Personas motivadas por el trabajo que realizan. Ej. Desarrollar software.
+>2. **Personas orientadas hacia sí mismas:** Personas motivadas por el éxito y el reconocimiento. Ej. Desarrollar software para lograr sus propias metas.
+>3. **Personas orientadas a la interacción:** Personas motivadas por la presencia y acciones de sus compañeros de trabajo. Ej. Desarrollar software como parte de un equipo.
+> 
+>Adicionalmente se llego a la conclusión de que el tipo de personalidad influye en la motivación.
 
-#### ¿Qué motiva a las personas?
-- Reconocimiento público y económico.
-- Socialización.
-- Asignarles tareas importantes, no imposibles y ofrecer capacitación.
+### Equipo y Trabajo en Equipo
 
-#### Problemas de la Motivación según Maslow
-El modelo de motivación de Maslow es útil desde el punto de vista personal de la motivación, pero no considera que las personas se sienten parte de una organización o un grupo profesional. No solo hay que pensar en la motivación individual, sino cómo puede motivar un equipo para lograr las metas de la organización.
+Un equipo es un conjunto de personas que realiza una tarea para alcanzar resultados. Trabajar en equipo implica a un grupo de personas trabajando de manera coordinada en la realización de un proyecto. El trabajo en equipo se basa en el principio de las 5C:
 
-En un estudio psicológico de motivación, Bass y Dunterman (1963) que analizaron la sensibilidad de grupos compuestos por participantes que eran homogéneos en las relaciones de orientación (interacción), orientación a la tarea, y la auto-orientación de la formación. Clasificaron a los profesionales en tres tipos:
-1. **Personas orientadas a las tareas:** Personas motivadas por el trabajo que realizan. Ej. Desarrollar software.
-2. **Personas orientadas hacia sí mismas:** Personas motivadas por el éxito y el reconocimiento. Ej. Desarrollar software para lograr sus propias metas.
-3. **Personas orientadas a la interacción:** Personas motivadas por la presencia y acciones de sus compañeros de trabajo. Ej. Desarrollar software como parte de un equipo.
-
-El tipo de personalidad influye en la motivación.
-
-### Concepto de Equipo y Trabajo en Equipo
-Un equipo es un conjunto de personas que realiza una tarea para alcanzar resultados. Un ejemplo práctico sería imaginar un equipo de fútbol participando de una final sin haberse preparado previamente.
-
-Trabajo en equipo implica un grupo de personas trabajando de manera coordinada en la ejecución de un proyecto.
-
-#### Trabajo en Equipo se basa en las 5C
 - **Complementariedad:** Cada miembro domina una área determinada del proyecto.
 - **Coordinación:** El equipo, con un líder a la cabeza, debe actuar de forma organizada con vista a sacar el proyecto adelante.
 - **Comunicación:** El trabajo en equipo exige una comunicación abierta entre todos sus miembros.
 - **Confianza:** Cada persona confía en el buen hacer del resto de sus compañeros.
 - **Compromiso:** Cada miembro se compromete a aportar lo mejor de sí mismo, a poner todo su empeño en sacar el trabajo adelante.
 
-### Diferencia entre Grupo y Equipo de Trabajo
-- **Grupo de Trabajo:** Hay un solo líder que decide, discute y delega. La responsabilidad es individual y el producto del trabajo es individual.
-- **Equipo de Trabajo:** Liderazgo compartido, el equipo decide y realiza un verdadero trabajo en conjunto. La responsabilidad es tanto individual como grupal.
+>[!tldr] Grupo de Trabajo vs Equipo de Trabajo
+>La principal diferencia ente ambos conceptos radica en el hecho de que en los grupos de trabajo hay un solo líder que decide, discute y delega. Mientras que en los equipos de trabajo el liderazgo es compartido, el equipo decide y realiza un verdadero trabajo en conjunto. La responsabilidad es tanto individual como grupal.
 
-### Etapas del Trabajo en Equipo
 Según B.W. Tuckman, los equipos atraviesan cinco etapas:
+
 1. **Formativa:** Transición de ser una persona individual a formar parte del equipo.
 2. **Tormentosa:** Los miembros comienzan a probar los límites y la flexibilidad del gerente.
 3. **Adaptación:** Las relaciones entre los miembros del equipo se estabilizan y comienza a desarrollarse la cohesión.
 4. **Desempeño:** El equipo está altamente comprometido y deseoso de lograr el objetivo del proyecto.
 5. **Desintegración:** El equipo se prepara para disolverse y la atención se dirige a las actividades finales.
 
-### Ventajas y Desventajas del Trabajo en Equipo
-- **Ventajas:** Agiliza planes y programas, las decisiones tienen mayor aceptación, y existe un mayor nivel de compromiso con los objetivos organizacionales.
-- **Desventajas:** Nadie quiere asumir errores en forma particular, pueden presentarse discusiones que dividan el equipo, y la coordinación puede ser difícil debido a la diversidad de pensamientos.
+Una de las principales ventajas del trabajo en equipo es que acelera los planes y programas, facilita la aceptación de decisiones y aumenta el compromiso con los objetivos organizacionales. Como desventajas está el hecho de que nadie quiere asumir errores individualmente, pudiendo surgir discusiones que dividan al equipo, además la coordinación puede ser complicada por la diversidad de opiniones.
 
-#### Problemas de los integrantes de un equipo de trabajo
-- Acaparar la palabra
-- Rivalidad entre los miembros
-- Integrantes desmotivados
-- Resistencia al cambio
-- Falta de participación
-- Escasa innovación
+>[!note] Problemas de Integración y Equipos Disfuncionales
+>Los problemas en un equipo de trabajo incluyen la acaparación de la palabra por parte de algunos miembros, rivalidades, desmotivación, resistencia al cambio, falta de participación y poca innovación. Estos son signos de un equipo disfuncional, marcado por la falta de confianza, compromiso y disposición para afrontar conflictos. Además, la evasión de responsabilidades y la falta de enfoque en las metas comprometen el éxito del equipo.
 
-### Aspectos de un Equipo Disfuncional
-- **Falta de Confianza**
-- **Falta de Compromiso**
-- **Temor al Conflicto**
-- **Evasión de Responsabilidades**
-- **No enfocarse en las metas**
+El trabajo en equipo es esencial en el desarrollo de software profesional. Los equipos de trabajo, generalmente de hasta 10 personas, son necesarios debido a la complejidad y variedad de tareas involucradas en estos proyectos. Los siguientes factores determinan el éxito de un equipo de trabajo:
 
-### Trabajo en Equipo para Proyecto de Software
-El trabajo en equipo es esencial en el desarrollo de software profesional. Los equipos de trabajo, generalmente de hasta 10 personas, son necesarios debido a la complejidad y variedad de tareas involucradas en estos proyectos.
-
-#### ¿Cuándo un equipo de trabajo es exitoso?
 - **Equipo cohesivo y con espíritu de equipo:** Piensan que el equipo es más importante que los individuos que lo integran.
 - **Leales al equipo:** Se identifican con las metas del equipo y con los demás miembros.
 - **Protegen al equipo ante cualquier interferencia externa:** Existe una unión estrecha entre personas.
 
-#### Los beneficios de crear un equipo cohesivo
-- El equipo puede establecer sus propios estándares de calidad.
-- Los individuos aprenden de los demás y se apoyan mutuamente.
-- El conocimiento se comparte.
-- Trabajo colectivo y mejoramiento de la calidad.
+Crear un equipo cohesivo trae numerosos beneficios. Los miembros pueden establecer sus propios estándares de calidad, aprender unos de otros y brindarse apoyo mutuo. Además, el conocimiento se comparte de manera efectiva, lo que fomenta el trabajo colectivo y mejora la calidad del resultado. Para fomentar la cohesión, es útil organizar eventos sociales, darle al equipo un sentido de identidad, como asignarle un nombre, y tratar a sus miembros como personas responsables y confiables.
+No obstante existen tres factores que pueden afectar el trabajo y la cohesión de un equipo de trabajo: 
 
-#### ¿Cómo podemos alentar la cohesión?
-- Realizar eventos sociales.
-- Darle sentido de identidad. Ponerle nombre al equipo.
-- Tratar a los miembros como responsables y confiables.
-
-Existen tres factores genéticos que afectan al trabajo en equipo:
-- **Composición del equipo:** Se necesita una combinación de personas en el grupo ya que el desarrollo de software implica varias actividades, negociación de clientes, programación, pruebas y documentación.
+- **Composición del equipo:** Se necesita una combinación de personas en el grupo, ya que el desarrollo de software implica varias actividades, negociación de clientes, programación, pruebas y documentación.
 - **Organización del equipo:** Un equipo debe organizarse de forma que los individuos puedan contribuir con sus mejores habilidades y completar las tareas como se esperaba.
 - **Comunicaciones técnicas y administrativas del equipo:** Es esencial la óptima comunicación entre los miembros del equipo y entre el equipo de ingeniería de software y otras partes interesadas en el proyecto.
 
-Reunir el equipo correcto no siempre garantiza el éxito del proyecto. Cambios en los negocios, cambios en el ambiente empresarial y falta de atención a la composición, organización y comunicación del equipo pueden afectar el éxito del proyecto.
+Reunir el equipo adecuado no garantiza automáticamente el éxito del proyecto. Factores como cambios en los negocios, en el entorno empresarial y la falta de atención a la composición, organización y comunicación del equipo pueden influir negativamente en los resultados.
+Para facilitar el trabajo en equipo, es crucial contar con herramientas efectivas como reuniones bien organizadas, respetando el calendario y el proceso; una toma de decisiones basada en consenso y evidencias; y un manejo adecuado de conflictos, entendiendo que estos son situaciones de crisis que surgen cuando las inquietudes de los miembros parecen incompatibles.
 
-### Herramientas que facilitan el Trabajo en Equipo
-- **Reuniones efectivas:** Respetar el calendario y el proceso de las reuniones.
-- **Toma de decisiones:** Buscar consenso y seleccionar alternativas basadas en información y evidencias.
-- **Manejo de conflictos:** Conflictos son situaciones de crisis que surgen cuando las inquietudes de dos o más personas parecen incompatibles.
+#### Efectos y Manejo de Conflictos
 
-#### Efectos de un conflicto
-- **Positivos:**
-  - Aumenta la creatividad.
-  - Clarifica ideas.
-  - Se aprende a conocer a los integrantes.
-  - Oportunidad para cambiar situaciones molestas.
-- **Negativos:**
-  - Disminuye productividad.
-  - Desajuste temporal.
-  - Tardanza en la toma de decisiones.
+Los conflictos dentro de un equipo pueden tener efectos tanto positivos como negativos. Por un lado, pueden aumentar la creatividad, clarificar ideas, ayudar a conocer mejor a los miembros y ofrecer oportunidades para resolver situaciones molestas. Por otro lado, pueden reducir la productividad, causar desajustes temporales y retrasar la toma de decisiones.
+Frente a un conflicto, es importante no ignorarlo, esperar con prudencia, escuchar con atención y luego actuar. Es fundamental preguntar y aclarar los temas, evitar ataques personales, describir sin juzgar, enfocarse en hechos concretos, buscar soluciones en conjunto y, si es necesario, dar tiempo para calmar al grupo.
+Para resolver un conflicto, es fundamental crear un ambiente propicio dejando de lado el orgullo, disculparse si es necesario, analizar el conflicto, recopilar toda la información, registrar posibles soluciones, tomar decisiones basadas en resultados esperados y actuar con firmeza y optimismo. Finalmente, siempre revisar el resultado obtenido.
 
-#### ¿Qué hacer frente a un conflicto?
-- No le dé la espalda.
-- Espere prudentemente.
-- Escuche atentamente.
-- Actúe:
-  - Pregunte, aclare los temas en cuestión.
-  - No permita ataques personales (no personalice).
-  - Describa, no enjuicie.
-  - No dé opinión, converse de hechos concretos.
-  - Busque alternativas de solución con el equipo.
-  - Si es necesario, dé un tiempo para calmar al grupo.
-
-#### Solución de conflictos
-- **Manejo (Ambiente propicio):**
-  - Dejar de lado el orgullo.
-  - Disculparse cuando ha cometido un error, aunque el otro esté libre de culpa.
-  - Analice el conflicto.
-  - Consiga toda la información.
-  - Registre las posibles soluciones.
-  - Tome una decisión en función de un posible resultado.
-  - Actúe con firmeza y con optimismo.
-  - Revise siempre el resultado.
-
-### Conclusión
-Trabajar en equipo es una oportunidad de aprendizaje y facilita las tareas de una organización, potenciando su capacidad. "Yo hago lo que usted no puede hacer, y usted hace lo que yo no puedo, pero juntos podemos hacer grandes cosas." — Madre Teresa de Calcuta
