--- a/4º Año/Comunicaciones y Redes/Unidad 5/4. Medios de Transmision.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/4. Medios de Transmision.md
@@ -1,7 +1,6 @@
 En los sistemas de transmisión de datos, el medio de transmisión es el camino físico entre el transmisor y el receptor. Estos medios se pueden clasificar en ***guiados***, donde las ondas electromagnéticas se transmiten a través de un medio sólido, como por ejemplo un par trenzado de cobre, un cable coaxial o una fibra óptica. Y los ***no guiados***, donde la transmisión se realiza de forma inalámbrica a través de la atmósfera, el espacio exterior o el agua.
 Las características y calidad de la transmisión están determinadas tanto por el tipo de señal como por las características del medio. Generalmente, en el diseño de sistemas de transmisión es deseable que tanto la distancia como la velocidad de transmisión sean lo más grande posible. Hay una serie de factores relacionados con el medio de transmisión y con la señal que determinan tanto la distancia como la velocidad de transmisión, tales como el ancho de banda, las dificultades en la transmisión, la interferencia y el número de receptores.
 
-
 ## Medios Guiados
 
 En los medios de transmisión guiados, la capacidad de transmisión, en términos de velocidad de transmisión o ancho de banda, depende drásticamente de la distancia y de sí el medio es punto a punto o multipunto. Los tres medios guiados que más se utilizan en la transmisión de datos son el par trenzado, el cable coaxial y la fibra óptica.
@@ -11,7 +10,7 @@ En los medios de transmisión guiados, la capacidad de transmisión, en término
 Consiste en dos cables de cobre aislados y entrecruzados en forma de espiral, formando un enlace de comunicación. Varios pares suelen encapsularse juntos en una envoltura protectora. El trenzado reduce las interferencias electromagnéticas (diafonía) entre pares adyacentes al utilizar diferentes pasos de torsión.
 
 >[!note] Pasos de Torsión
->Los pasos de tersión no es más que la distancia que se necesita para que los cables dentro de un par realicen una vuelta completa en su trenzado. En otras palabras, es la longitud del cable en la que los dos conductores se entrecruzan para formar un bucle.
+>Los pasos de torsión no es más que la distancia que se necesita para que los cables dentro de un par realicen una vuelta completa en su trenzado. En otras palabras, es la longitud del cable en la que los dos conductores se entrecruzan para formar un bucle.
 
 El par trenzado se puede usar para transmitir tanto señales analógicas como señales digitales. Al transmitir señales analógicas exige amplificadores cada 5 km o 6 km. Mientras que para transmisión digital, el par requiere repetidores cada 2 km o 3 km.
 Este medio de transmisión posee una gran susceptibilidad a las interferencias y al ruido, debido a su fácil acoplamiento con campos electromagnéticos externos. Para reducir estos efectos negativos es posible tomar algunas medidas, como el apantallamiento del cable con una malla metálica que reduce las interferencias externas, o el trenzado en los cables el cual reduce las interferencias de baja frecuencia y el uso de distintos pasos de torsión entre los pares adyacentes que reduce la diafonía.
